After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759476 - gucharmap compile with disable-deprecations.
gucharmap compile with disable-deprecations.
Status: RESOLVED FIXED
Product: gucharmap
Classification: Core
Component: general
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: gucharmap maintainers
gucharmap maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-15 01:41 UTC by huzheng001@gmail.com
Modified: 2016-02-14 09:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description huzheng001@gmail.com 2015-12-15 01:41:15 UTC
My software(stardict) disable-deprecations and use gucharmap.
=====
AC_ARG_ENABLE([deprecations],
        AS_HELP_STRING([--disable-deprecations],[Disable deprecated gtk functions (default: enabled)]),
        [enable_deprecations=$enableval],
        [enable_deprecations=yes])

if test "x$enable_deprecations" = "xno" ; then
        STARDICT_CFLAGS="$STARDICT_CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED"
        STARDICT_CFLAGS="$STARDICT_CFLAGS -DGTK_DISABLE_SINGLE_INCLUDES"
fi
=====

Compile will show:
=====
/usr/include/gucharmap-2.90/gucharmap/gucharmap-unicode-info.h:48:1: error: 'G_CONST_RETURN' does not name a type
/usr/include/gucharmap-2.90/gucharmap/gucharmap-unicode-info.h:49:1: error: 'G_CONST_RETURN' does not name a type
=====

Can you update gucharmap to compile with disable-deprecations?
Thank you very much!