lib: Remove G_CONST_RETURN

https://bugzilla.gnome.org/show_bug.cgi?id=759476